# Studio-link

./: .gitignore  CREDITS.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
apps/sender-web/: package.json
apps/sender-web/public/: app.js  index.html  styles.css
apps/sender-web/src/: server.js
apps/signaling-server/: package.json
apps/signaling-server/src/: server.js
apps/windows-receiver-rust/: Cargo.toml
apps/windows-receiver-rust/src/: main.rs
certs/: dev-cert.pem  dev-key.pem
docs/: ARCHITECTURE.md  REUSE_RULES.md  ROADMAP.md
