[package]
name = "studio-link"
version = "1.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
cpal = "0.15"
opus = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
warp = { version = "0.3", features = ["tls"] }
webrtc = "0.11"
rtp = "0.11"
webrtc-util = "0.9"
virtualcam = "0.1.1"
openh264 = "0.9.3"


